--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Your Website Title
-description: A description of your website
-author: Your Name
-show_downloads: true
+title: Qibin Shi 施其斌
+description: Earthquake seismologist
+
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-time-machine
